--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "craco-alias": "^3.0.1",
     "craco-less": "2.1.0-alpha.0",
     "cross-env": "^7.0.3",
+    "firebase": "^11.6.0",
     "i18next": "^21.9.1",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
@@ -72,5 +73,6 @@
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
